--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -120,7 +120,7 @@
             <div>
                 <div class="card_head">
                     <h3 class="card_head_title card_head_left">
-                        <span class="titleNumber">01</span><span class="pj-name">液状化診断</span>
+                       <a href="https://structuralengine.github.io/Liquefaction/"> <span class="titleNumber">01</span><span class="pj-name">液状化診断</span></a>
                     </h3>
                 </div>
                 <div class="card_body">
@@ -142,7 +142,7 @@
             <div>
                 <div class="card_head">
                     <h3 class="card_head_title card_head_left">
-                        <span class="titleNumber">02</span><span class="pj-name">斜面の安定計算</span>
+                       <a href="https://dobopro.github.io/RotationalSlip/"> <span class="titleNumber">02</span><span class="pj-name">斜面の安定計算</span></a>
                     </h3>
                 </div>
                 <div class="card_body">
