--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <a routerLink="./page" style="border:0;">
-    <img src="../assets/img/DoboPro_skell.png">
+    <img src="./assets/img/DoboPro_skell.png">
     </a>
 </header>
 
