--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -115,7 +115,7 @@
         <div class="card left wow fadeInUp pj" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon.png">
+                <img src="./assets/img/icon.png">
             </div>
             <div>
                 <div class="card_head">
@@ -137,7 +137,7 @@
         <div class="card right wow fadeInUp pj" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/slip.png">
+                <img src="./assets/img/slip.png">
             </div>
             <div>
                 <div class="card_head">
@@ -162,9 +162,9 @@
         <h2 id="gallery">Gallery</h2>
         <p>ギャラリー</p>
                 <div class="slider">
-            <div class="slider__content"><img src="../../assets/img/vsdisplay.jpg" alt="写真" height="65%" width="100%"  class="working_img"></div>
-            <div class="slider__content"><img src="../../assets/img/teach.jpg"  alt="写真"height="65%" width="100%"  class="working_img"></div>
-            <div class="slider__content"><img src="../../assets/img/make2.jpg" alt="写真"height="65%" width="100%"  class="working_img"></div>
+            <div class="slider__content"><img src="./assets/img/vsdisplay.jpg" alt="写真" height="65%" width="100%"  class="working_img"></div>
+            <div class="slider__content"><img src="./assets/img/teach.jpg"  alt="写真"height="65%" width="100%"  class="working_img"></div>
+            <div class="slider__content"><img src="./assets/img/make2.jpg" alt="写真"height="65%" width="100%"  class="working_img"></div>
           </div>
     </div>
 </div>
@@ -174,7 +174,7 @@
         <p>チーム紹介</p>
         <div class="explain">
         <a href="https://doboku-lab.com/">
-        <img src="../../assets/img/dobokulab.png">
+        <img src="./assets/img/dobokulab.png">
         </a>
             <p>我々のチームの基盤は「DobokuLab」という土木系学生団体です。Dobo×ProはDobokuLabの理念に則って活動しております。</p>
         </div>
@@ -224,7 +224,7 @@
         <div class="card left wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_mizutani.jpg">
+                <img src="./assets/img/icon_mizutani.jpg">
             </div>
             <div>
                 <div class="card_head">
@@ -243,7 +243,7 @@
         <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_yoshikawa.jpg">
+                <img src="./assets/img/icon_yoshikawa.jpg">
             </div>
             <div>
                 <div class="card_head">
@@ -263,7 +263,7 @@
         <div class="card left wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_yoshinari.jpg">
+                <img src="./assets/img/icon_yoshinari.jpg">
             </div>
             <div>
                 <div class="card_head">
@@ -281,7 +281,7 @@
         <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_matsuda.jpg">
+                <img src="./assets/img/icon_matsuda.jpg">
             </div>
             <div>
                 <div class="card_head">
@@ -301,7 +301,7 @@
         <div class="card left wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_in.jpg">
+                <img src="./assets/img/icon_in.jpg">
             </div>
             <div>
                 <div class="card_head">
@@ -320,7 +320,7 @@
         <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
             style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="image-area">
-                <img src="../../assets/img/icon_sasazawa.png">
+                <img src="./assets/img/icon_sasazawa.png">
             </div>
             <div>
                 <div class="card_head">
