--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -339,7 +339,26 @@
                    </div>
             </div>
         </div>
-       
+        <div class="card left wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
+            style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
+            <div class="image-area">
+                <img src="./assets/img/icon_ouchi.jpg">
+            </div>
+            <div>
+                <div class="card_head">
+                    <h3 class="card_head_title card_head_left">
+                        <span class="titleNumber">07</span>大内実嶺
+                    </h3>
+                </div>
+                <div class="card_body">
+                    <p>土木に興味があるのでたくさんの知識を吸収して、将来に生かせたらいいなと思っています。
+                        皆さんのお手伝いをできるかぎり頑張ります！
+                        お笑いと山登りと読書が好きです！</p>
+                    <a class="twitter" href="https://twitter.com/mmmirei000"><i
+                            class="fab fa-twitter-square"></i></a>
+                </div>
+            </div>
+        </div>
 
     </div>
 </div>
