--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -369,8 +369,27 @@
           <a class="twitter" href="https://twitter.com/mmmirei000"><i class="fab fa-twitter-square"></i></a>
         </div>
       </div>
+      <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
+        style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
+        <div class="image-area">
+          <img src="./assets/img/icon_matsuda.jpg">
+        </div>
+        <div>
+          <div class="card_head">
+            <h3 class="card_head_title card_head_left">
+              <span class="titleNumber">08</span> 芝崎千紗
+            </h3>
+          </div>
+          <div class="card_body">
+            <p>土木を先行している大学生です！</p>
+            <p>地理や地学、交通都市計画や防災都市計画などを通して地域の歴史を知ることが大好きです。</p>
+            <p>Webプログラミングではバックエンドを通して土質力学の基礎を再勉強しております。</p>
+            <p>研究に向けて日々学ばせて頂いております！</p>
+            <a class="twitter" href="https://twitter.com/maccar88"><i class="fab fa-twitter-square"></i></a>
+          </div>
+        </div>
+      </div>
     </div>
-
   </div>
 </div>
 
