--- a/src/app/landingpage/landingpage.component.html
+++ b/src/app/landingpage/landingpage.component.html
@@ -369,23 +369,24 @@
           <a class="twitter" href="https://twitter.com/mmmirei000"><i class="fab fa-twitter-square"></i></a>
         </div>
       </div>
-      <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
-        style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
-        <div class="image-area">
-          <img src="./assets/img/icon_matsuda.jpg">
+    </div>
+    <div class="card right wow fadeInUp" data-wow-duration="1.3s" data-wow-delay="0.3s"
+      style="visibility: visible; animation-duration: 1.3s; animation-delay: 0.3s; animation-name: fadeInUp;">
+      <div class="image-area">
+        <img src="./assets/img/icon_shibasaki.jpg">
+      </div>
+      <div>
+        <div class="card_head">
+          <h3 class="card_head_title card_head_left">
+            <span class="titleNumber">08</span>芝﨑千紗
+          </h3>
         </div>
-        <div>
-          <div class="card_head">
-            <h3 class="card_head_title card_head_left">
-              <span class="titleNumber">08</span> 芝崎千紗
-            </h3>
-          </div>
-          <div class="card_body">
-            <p>土木を先行している大学生です！</p>
-            <p>地理や地学、交通都市計画や防災都市計画などを通して地域の歴史を知ることが大好きです。</p>
-            <p>Webプログラミングではバックエンドを通して土質力学の基礎を再勉強しております。</p>
-            <p>研究に向けて日々学ばせて頂いております！</p>
-            <a class="twitter" href="https://twitter.com/maccar88"><i class="fab fa-twitter-square"></i></a>
+        <div class="card_body">
+          <p>都市工学を学んでいます。大学生活を充実したものにするためにDoboProの活動をしています。趣味は音楽を聴いたり、ライブに行ったりすることです。</p>
+          <p>公式Twitter、Facebook運用してます！公式アカウントを下に貼っていますので是非チェックしてみてください。</p>
+          <div class="iconArea">
+            <a class="twitter" href="https://twitter.com/DoboPro"><i class="fab fa-twitter-square"></i></a>
+            <a class="facebook" href="https://www.facebook.com/DoboPro1106"><i class="fab fa-facebook-square"></i></a>
           </div>
         </div>
       </div>
