--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -666,6 +666,16 @@ blockquote {
       opacity: 0.7;
     }
   }
+  .facebook{
+    display: block;
+    margin-top: 8px;
+    margin-left: 8px;
+    color: #3b5998;
+    font-size: 42px;
+    &:hover {
+      opacity: 0.7;
+    }
+  }
 }
 
 footer {
